Mon Mar 21 07:46:16 2005  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/orbsvcs/CosNaming.mpc:

         Turn off optimization for the CosNaming_Serv library when using
          cxx on Tru64.  It's broken with respect to the binding iterator
          template class.

        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Load_Average_Monitor.cpp:
        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Utilization_Monitor.cpp:

          Corrected HP-UX and Windows related macros and added support for
          MacOS X.

        * orbsvcs/orbsvcs/Naming/Naming_Server.h:

          Removed an unused data member.

        * orbsvcs/orbsvcs/Naming/Flat_File_Persistence.cpp:
        * orbsvcs/orbsvcs/Naming/Storable.h:
        * orbsvcs/orbsvcs/Naming/Storable.inl:
        * orbsvcs/orbsvcs/Naming/Storable_Naming_Context.cpp:

          Added error indication to the flat file extraction operators and
          error checking to the storable naming context loading code.

          Also, changed the initialization of String_var data member in
          Storable_Naming_Context.cpp to duplicate the constant string ("").

        * orbsvcs/orbsvcs/Shutdown_Utilities.cpp:

          Added the method name to the %p parameter.

Mon Mar 21 06:56:10 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tao/IIOP_Connection_Handler.cpp:
        * tao/ORB_Core.cpp:
        * tao/params.h:
        * tao/params.i:
        * tao/params.cpp:

          Added a new ORB option, -ORBLingerTimeout, that allows the user to
          set the linger timeout on a TCP socket before closing.  The
          default is to not modify the linger timeout.

Mon Mar 21 12:15:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Connection_Handler.cpp:
          Updated formatting of debug message so that it matches the
          other lines better

Mon Mar 21 12:12:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Messaging/*A.cpp: