@@ -1,3 +1,9 @@
+Mon Mar 21 07:56:49 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * docs/Options.html:
+
+          Documented the new -ORBLingerTimeout option.
+
 Mon Mar 21 07:46:16 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * orbsvcs/orbsvcs/CosNaming.mpc:
